myteo/test/parser/ast/if/unparenthesized_test_error.exp
ERROR: test/parser/ast/if/unparenthesized_test_error.myte:2:5 Unexpected token "test", expected "("
 2 |   if test {}
   |      ^^^^